# FACIN_IA

./: .gitignore  Diretrizes FACIN_IA.txt  FACIN_IA_Projeto.md  README.md  README_FACIN_IA.md  TEMPLATE_SETUP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  facin-ia-adocao.md
.github/agents/: FACIN_IA.agent.md
.github/plugin/: marketplace.json
.github/prompts/: facin-ia-diagnostico.prompt.md
.github/workflows/: publish-python-package.yml
docs/: FACIN_IA_Avaliacao_Automatica.xlsx  FACIN_IA_Customizacao_Copilot.html  FACIN_IA_Customizacao_Copilot.md  FACIN_IA_Distribuicao_PyPI_Template.html  FACIN_IA_Distribuicao_PyPI_Template.md  FACIN_IA_Modelo_Avaliacao.html  FACIN_IA_Modelo_Avaliacao.md  FACIN_IA_Planilha_Avaliacao.html  FACIN_IA_Planilha_Avaliacao.md  FACIN_IA_Plugin_Agente.html  FACIN_IA_Plugin_Agente.md  FACIN_IA_Sintese.html  FACIN_IA_Versao_Executiva.html  FACIN_IA_Versao_Executiva.md
docs_referencia/docs/: Conversa_Folha_Arquitetura_Solucao.html  Conversa_Folha_Arquitetura_Solucao.md  Conversa_Folha_Avaliacao_Maturidade.html  Conversa_Folha_Avaliacao_Maturidade.md  Conversa_Folha_Backlog_Kanban.html  Conversa_Folha_Backlog_Kanban.md  Conversa_Folha_Backlog_Sprints.html  Conversa_Folha_Projeto.html  (+65 more)
errors/: erro_weasyprint_pdf.txt
scripts/: generate_artifacts.py  generate_project_docs.py
spec/: FACIN_IA_Customizacao_Copilot.md  FACIN_IA_Distribuicao_PyPI_Template.md  FACIN_IA_Modelo_Avaliacao.md  FACIN_IA_Planilha_Avaliacao.md  FACIN_IA_Plugin_Agente.md  FACIN_IA_Sintese.md  FACIN_IA_Versao_Executiva.md
(+21 files in other folders)
